# fontatlas

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/msdfgen-1.1/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp
lib/msdfgen-1.1/core/: Contour.cpp  Shape.cpp  Vector2.cpp  edge-coloring.cpp  edge-segments.cpp  equation-solver.cpp  msdfgen.cpp  render-sdf.cpp  save-bmp.cpp  shape-description.cpp
lib/msdfgen-1.1/ext/: import-font.cpp  import-font.h  import-svg.cpp  save-png.cpp
lib/msdfgen-1.1/include/: lodepng.h  tinyxml2.h
lib/msdfgen-1.1/include/freetype/: freetype.h  ftbbox.h  ftbdf.h  ftbitmap.h  ftcache.h  fterrdef.h  fterrors.h  ftgasp.h  ftglyph.h  ftgxval.h  ftgzip.h  ftimage.h  ftincrem.h  ftlcdfil.h  ftlist.h  ftlzw.h  ftmac.h  ftmm.h  ftmodapi.h  ftotval.h  ftoutln.h  ftpfr.h  ftrender.h  ftsizes.h  ftsnames.h  ftstroke.h  ftsystem.h  fttrigon.h  fttypes.h  ftwinfnt.h  t1tables.h  ttnameid.h  tttables.h
lib/msdfgen-1.1/include/freetype/config/: ftstdlib.h
lib/msdfgen-1.1/lib/: FTL.TXT  lodepng.cpp  tinyxml2.cpp
shl/: build.sh  clean.sh  rebuild.sh  run.sh
src/: dds_header.h  execution_status.h  font_format.h  font_settings.h  fontatlas.h  log.h  main.cpp  types.h
